--- a/.babelrc
+++ b/.babelrc
@@ -3,4 +3,6 @@
         "@babel/env",
         "@babel/react"
     ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
